# communication_esp32_tauri

./: .gitignore  Cargo.toml  README.md  TUTORIAL.md
backend/: Cargo.toml  sdkconfig.defaults
backend/src/: lib.rs  main.rs
gui/src/: App.tsx
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: lib.rs  main.rs
scripts/: build.sh  dev.sh
shared_crypto/: Cargo.toml  README.md
shared_crypto/src/: lib.rs
