[package]
name = "esp32_tauri_crypto"
version = "0.1.0"
edition = "2021"
description = "ESP32とTauri間の軽量暗号化通信ライブラリ"
authors = ["hiroki077 <hirokibask1275@outlook.jp>"]
license = "MIT"

[features]
default = []
esp32 = ["dep:esp-idf-svc"]
tauri = ["dep:tauri", "dep:serialport"]

[dependencies]
# 共通の暗号化関連
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }
rand_core = { version = "0.6", features = ["getrandom"] }

# ESP32用の依存関係（オプション）
esp-idf-svc = { version = "0.51", default-features = false, features = ["alloc", "std"], optional = true }

# Tauri用の依存関係（オプション）
tauri = { version = "2", optional = true }
serialport = { version = "4.0", optional = true }